src/Base/main/default/objects/Quote/fields/Financing_Account__c.field-meta.xml
<CustomField>
    <fullName>Financing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>