src/Base/main/default/objects/Quote/fields/Insurance_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Sub_Total__c</fullName>
    <label>Insurance Sub Total</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.IsInsurance__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>