src/Base/main/default/objects/Quote/fields/Pre_Insurance_Total__c.field-meta.xml
<CustomField>
    <fullName>Pre_Insurance_Total__c</fullName>
    <formula>Subtotal  + TotalTaxes__c - Insurance_Total__c - TradeInValue__c + TradeInLien__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Insurance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>