src/Base/main/default/objects/Quote/fields/Tax_Amount_Federal__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Federal__c</fullName>
    <formula>IF(  TotalPrice &lt;  TradeInAmount__c,
    0,
    ( Taxable_Amount_Federal__c - TradeInAmount__c ) * Tax_Rate_Federal__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount (Federal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>