src/Base/main/default/objects/Quote/fields/Tax_Amount_Retail__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Retail__c</fullName>
    <formula>IF( TotalPrice &lt; TradeInAmount__c ,
0,
( Taxable_Amount_Retail__c - TradeInAmount__c ) * Tax_Rate_Retail__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount (Retail)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>