src/Base/main/default/objects/Quote/fields/Tax_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Total__c</fullName>
    <description>The sum of all applicable taxes on the line Items</description>
    <formula>Tax_Amount_Federal__c +  Tax_Amount_Provincial__c + Tax_Amount_Retail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>