src/Base/main/default/objects/Quote/fields/Tax_Rate_Federal__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Federal__c</fullName>
    <label>Tax Rate (Federal)</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>