src/Base/main/default/objects/Quote/fields/Tax_Rate_Provincial__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Provincial__c</fullName>
    <label>Tax Rate (Provincial)</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>