src/Base/main/default/objects/Quote/fields/Tax_Rate_Retail__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Retail__c</fullName>
    <label>Tax Rate (Retail)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>