src/Base/main/default/objects/Quote/fields/Taxable_Amount_Retail__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount_Retail__c</fullName>
    <label>Taxable Amount (Retail)</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Taxable_Retail__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>