src/Base/main/default/objects/Quote/fields/TotalTaxes__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxes__c</fullName>
    <formula>Tax_Amount_Federal__c + Tax_Amount_Provincial__c + Tax_Amount_Retail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>