src/Base/main/default/objects/Quote/fields/TradeInAmount__c.field-meta.xml
<CustomField>
    <fullName>TradeInAmount__c</fullName>
    <label>Trade In Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>