src/Base/main/default/objects/Quote/fields/TradeInLien__c.field-meta.xml
<CustomField>
    <fullName>TradeInLien__c</fullName>
    <label>Trade In Lien</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>