src/Base/main/default/objects/Quote/fields/TradeInValue__c.field-meta.xml
<CustomField>
    <fullName>TradeInValue__c</fullName>
    <formula>TradeInAmount__c  -  TradeInLien__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade In Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>